# polyledra-v1

./: .gitattributes  BOM.md  README.md  index.js  package-lock.json  package.json
beat/: README.md  asoundrc
circuit-libraries/: SeeedOPL-Capacitor-2016.lib  SeeedOPL-Connector-2016.lib  SeeedOPL-Crystal Oscillator-2016.lib  SeeedOPL-Diode-2016.lib  SeeedOPL-Display-2016.lib  SeeedOPL-Fuse-2016.lib  SeeedOPL-Inductor-2016.lib  SeeedOPL-LED-2016.lib  SeeedOPL-Resistor-2016.lib  SeeedOPL-Transistor-2016.lib
controller-app/: Cargo.toml  INSTALL.md  README.md
controller-app/src/: color.rs  control.rs  display.rs  main.rs  render.rs  shape.rs
controller-app/src/display/: gl.rs  hal.rs  mod.rs
controller-app/src/scene/: glow.rs  mod.rs  rainbow.rs  spark.rs  test.rs  walk.rs
controller-app/src/util/: compute_edge_lengths.rs  mod.rs
controller-circuit/: README.md  polyledra-controller-cache.lib  polyledra-controller.bak  polyledra-controller.kicad_pcb  polyledra-controller.pro  polyledra-controller.sch
edge-connectors/: tetrahedron-edge-connector.scad
pixelctl/: Cargo.toml  README.md
pixelctl/src/: clock.rs  color.rs  control.rs  (+4 more)
shapes/: README.md  index.js  package.json  polygon.js
vertex-circuit/: README.md  edge-a.js  edge-a.kicad_pcb  edge-a.kicad_pcb-bak  edge-a.pro  edge-b.js  edge-b.kicad_pcb  edge-b.kicad_pcb-bak  octahedron-vertex.js  octahedron-vertex.kicad_pcb  octahedron-vertex.kicad_pcb-bak  package-lock.json  package.json  tetrahedron-vertex.js  tetrahedron-vertex.kicad_pcb  tetrahedron-vertex.kicad_pcb-bak
vertex-structure/: README.md
(+212 files in other folders)
