[package]
name = "controller-app"
version = "0.1.0"
authors = ["Michael Williams <michael.williams@enspiral.com>"]

[features]
gl = ["glfw", "kiss3d"]
hal = ["linux-embedded-hal"]

[dependencies]
clap-verbosity-flag = "0.1"
fps_clock = "2.0"
glfw = { version = "0.19", optional = true }
kiss3d = { version = "0.13", optional = true }
linux-embedded-hal = { version = "0.1", optional = true }
log = "0.4"
modulo = "0.1"
nalgebra = "0.14"
rand = "0.4"
structopt = "0.2"
